<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="durec_current_language">en</string>
    <string name="app_name" tools:ignore="MissingTranslation">DU Recorder</string>
    <string name="durec_feedback_input_hint">We welcome your feedbacks</string>
    <string name="durec_feedback">Feedback</string>
    <string name="durec_email">Email Address (Optional)</string>
    <string name="durec_feedback_send_fail">Sorry, an error occurred. Please try again.</string>
    <string name="durec_feedback_send_ok">Your feedback was sent successfully. Thank you for support!</string>
    <string name="durec_feedback_contact_distinguish_title">Contact:</string>
    <string name="durec_common_submit">Submit</string>
    <string name="durec_common_cancel">Cancel</string>
    <string name="durec_common_confirm">Confirm</string>
    <string name="durec_common_share">Share</string>
    <string name="durec_common_delete">Delete</string>
    <string name="durec_no_permission_tip">Permission to record video is required first.</string>
    <string name="durec_no_space">Your storage space is less than 100M. You need to free up your storage space to record.</string>
    <string name="durec_about_protocol">User Agreement</string>
    <string name="durec_setting_video_location">Video location</string>
    <string name="durec_setting_show_touches">Show touches</string>
    <string name="durec_audio_unavailable_dialog_title">Audio recorder is unavailable</string>
    <string name="durec_audio_unavailable_dialog_message">Sorry, the audio can\'t be recorded.\nYou can restart your phone then retry recording to solve the problem，or tap the CONTINUE button to record a silent video.</string>
    <string name="durec_audio_unavailable_dialog_pos_btn">CONTINUE</string>
    <string name="durec_stop_timeout">The video reached the max duration. Recording stopped.</string>
    <string name="durec_drec_stop_record_for_screen_off">Screen turned off. Recording stopped.</string>
    <string name="durec_video_resolution_standard">Standard</string>
    <string name="durec_floatbutton_record_file_null">Unable to find the video storage location</string>
    <string name="durec_menu_about">About us</string>
    <string name="durec_video_size">Size: %1$sM</string>
    <string name="durec_del_success">The video has been deleted successfully.</string>
    <string name="durec_del_fail">Failed to delete</string>
    <string name="durec_common_open">Open</string>
    <string name="durec_setting_resolution">Video resolution</string>
    <string name="durec_setting_bitrate">Video quality</string>
    <string name="durec_setting_framerate">FPS</string>
    <string name="durec_setting_record_audio">Record audio</string>
    <string name="durec_setting_countdown">Countdown</string>
    <string name="durec_setting_item_countdown_subtitle">Recording will begin after the countdown</string>
    <string name="durec_countdown_no">No countdown</string>
    <string name="durec_setting_item_bitrate_subtitle">Higher quality means larger video file sizes</string>
    <string name="durec_auto">Auto</string>
    <string name="durec_setting_item_framerate_subtitle">Higher frame rate will make videos smoother but use more CPU</string>
    <string name="durec_camera_window_error">Error while opening camera</string>
    <string name="durec_stop_record_error">Recording error</string>
    <string name="durec_network_error">Network is not available now.</string>
    <string name="durec_scene_recommend_content">We select a tutorial video of %1$s for you!</string>
    <string name="durec_local_video_empty_prompt">You have not recorded any video yet.</string>
    <string name="durec_no_browser_app">No browser or %1$s installed</string>
    <string name="durec_delete_local_video_prompt">Are you sure to delete the video from your device\'s local storage?</string>
    <string name="durec_setting_item_rate_us">Rate us</string>
    <string name="durec_setting_item_rate_us_subtitle">5 stars means BEST on Google Play</string>
    <string name="durec_rename_video_dialog_title">Enter the title of the video</string>
    <string name="durec_rename_video_dialog_illegal_tip">The file name could not contain the char <xliff:g id="illegal">%1$s</xliff:g></string>
    <string name="durec_rename_video_failed">Rename file failed</string>
    <string name="durec_rename_video_success">Video renamed</string>
    <string name="durec_rename_video_name_exist">Name already exists. Please choose another.</string>
    <string name="durec_setting_record_float_switch">Hide the record window when record</string>
    <string name="durec_setting_item_record_float_subtitle">Only use the notification bar to control recording</string>
    <string name="durec_record_disable_btn_text">I KNOW</string>
    <string name="durec_shortcut_name">Screen Recorder</string>
    <string name="durec_store_space">%1$sG available/%2$sG in total</string>
    <string name="durec_update_text">What\'s new for %1$s:</string>
    <string name="durec_languages">Languages</string>
    <string name="durec_languages_dialog_title">Select a language</string>
    <string name="durec_recorder_noti_start">Record</string>
    <string name="durec_recorder_noti_resume">Resume</string>
    <string name="durec_common_stop">Stop</string>
    <string name="durec_recorder_noti_camera_open">Open camera</string>
    <string name="durec_recorder_noti_ready">Recorder is ready.</string>
    <string name="durec_recorder_noti_ready_sub">Tap here to start recording.</string>
    <string name="durec_recorder_noti_recording">Recording in progress</string>
    <string name="durec_recorder_noti_recording_sub">Tap here to stop recording.</string>
    <string name="durec_recorder_rsl_noti_title">Recording is finished.</string>
    <string name="durec_recorder_rsl_noti_sub_title">Tap here to check your recorded video.</string>
    <string name="durec_recorder_rsl_noti_watch">Watch</string>
    <string name="durec_recorder_noti_paused">Recording paused</string>
    <string name="durec_recorder_noti_paused_sub">Tap here to resume recording.</string>
    <string name="durec_recorder_screenshot_noti_title">Screenshot captured.</string>
    <string name="durec_recorder_screenshot_noti_sub_title">Tap here to view your screenshot.</string>
    <string name="durec_common_check">Check</string>
    <string name="durec_video_not_found">Sorry, we didn\'t find the video.</string>
    <string name="durec_picture_not_found">Sorry, we didn\'t find the picture.</string>
    <string name="durec_picture_tools_stitch">Stitch images</string>
    <string name="durec_picture_list_stitch">Stitch(%1$s/%2$s)</string>
    <string name="durec_picture_list_edit_counts">Stitched &amp; Edited (%1$s)</string>
    <string name="durec_common_ok">OK</string>
    <string name="durec_picture_snitch">Stitch</string>
    <string name="durec_common_edit">Edit</string>
    <string name="durec_picture_edit_prompt">Are you sure you want to quit? Your changes won\'t be saved.</string>
    <string name="durec_picture_save_success">Image saved</string>
    <string name="durec_picture_save_fail">Failed to save the image</string>
    <string name="durec_save_screenshot_error">Save screenshot failed</string>
    <string name="durec_picture_edit_name">Picture editing</string>
    <string name="durec_picture_list_edit_empty">You don\'t have stitched or edited images.</string>
    <string name="durec_common_mosaic">Mosaic</string>
    <string name="durec_common_crop">Crop</string>
    <string name="durec_picture_stitch_img_too_tiny">The height of some of the images is too low to stitch.</string>
    <string name="durec_picture_stitch_oom_error">"Sorry, we can't stitch the images because of the shortage of RAM space. You can close other apps to free up RAM."</string>
    <string name="durec_permission_fir_msg">When prompted as shown below:</string>
    <string name="durec_permission_prompt_msg"><![CDATA[<b>%1$s</b>]]> will start capturing everything that\'s displayed on your screen.</string>
    <string name="durec_permission_remember_text">Don\'t show again</string>
    <string name="durec_permission_action_text">Start now</string>
    <string name="durec_precise_cut_tip">Tap to make precise trimming</string>
    <string name="durec_cut_btn_tip">Click to cut the part that you choose</string>
    <string name="durec_cut_save_query">Do you want to save your changes?</string>
    <string name="durec_cut_save_query_giveup">No thanks</string>
    <string name="durec_cut_toast_success">Saved successfully</string>
    <string name="durec_cut_video_no_space">Your storage space is not enough.</string>
    <string name="durec_cut_video_max_file_size_tip">The file size can\'t be more than 4GB. Please shorten your edited video.</string>
    <string name="durec_live_with_app">My Live stream with %1$s</string>
    <string name="durec_cannot_use_pop_window_prompt">You can\'t use the pop-up window because you didn\'t turn on the pop-up window option.</string>
    <string name="durec_turn_on_pop_window_prompt">We suggest you to turn on the pop-up window option in system settings to ensure the proper use of %1$s.</string>
    <string name="durec_turn_it_on">Turn it on</string>
    <string name="durec_use_notification_to_rec">Use notification to record</string>
    <string name="paypal_account_fillin_title">Enter your PayPal account</string>
    <string name="paypal_account_fillin_desc">In order to collect donations, please specify a valid PayPal account email below. All donations will be transferred directly to your PayPal account. %1$s DOES NOT charge any fees.</string>
    <string name="paypal_unbind">Unbind</string>
    <string name="durec_failed_to_connect_youtube_prompt_title">How to solve the "Failed to connect to YouTube" problem</string>
    <string name="durec_failed_to_connect_youtube_prompt_message">Tap the button below to open the YouTube live dashboard page and wait until it has finished loading. Then, reopen the %1$s live page to start livestreaming.</string>
    <string name="durec_failed_to_connect_youtube_prompt_sub_message">If this solution doesn\'t work, please open %1$s on your computer and wait until it has finished loading. Then, reopen the %2$s live page to start livestreaming.</string>
    <string name="durec_start_live_guide_message_24_hour_limit">Attention: Due to YouTube restrictions, it may take 24 hours to get access to live streaming. Once activated, you can go live instantly.</string>
    <string name="durec_apply_to_all_streaming_title">Apply to all livestream titles</string>
    <string name="durec_common_title">Title</string>
    <string name="durec_fix_problem">Fix problem</string>
    <string name="durec_check_paypal_status">Check status</string>
    <string name="durec_donation_be_limited_to_paypal">Donations to your account may be restricted by PayPal.</string>
    <string name="durec_solve_limited_to_paypal_title">Please also confirm in %1$s:</string>
    <string name="durec_solve_limited_to_paypal_step_1">1. You may have received an email notification from PayPal.</string>
    <string name="durec_solve_limited_to_paypal_step_2">2. You can also check and attempt to solve this problem in %1$s.</string>
    <string name="durec_solve_limited_to_paypal_step_3">3. Disable: Block payments sent to you in a currency you don\'t hold.</string>
    <string name="durec_solve_limited_to_paypal_step_4">4. (For business account) Disable: Block payments from the "Pay Anyone" subtab of the Send Money tab.</string>
    <string name="durec_edit_video_save_type_selection_alert">Please choose the video type to save. The normal video will not include promotion content and cannot get revenue.</string>
    <string name="durec_promotion_video">Promotion video</string>
    <string name="durec_normal_video">Normal video</string>
    <string name="durec_no_longer_prompted">No longer prompted</string>
</resources>