<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.duapps.screen.recorder.ui.FontTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/durec_failed_to_connect_youtube_prompt_title"
        android:textColor="#555555"
        android:textSize="15dp"/>

    <com.duapps.screen.recorder.ui.FontTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/durec_failed_to_connect_youtube_prompt_message"
        android:textColor="#535353"
        android:textSize="12dp"/>

    <com.duapps.screen.recorder.ui.FontTextView
        android:id="@+id/sub_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/durec_failed_to_connect_youtube_prompt_sub_message"
        android:textColor="#888888"
        android:textSize="11dp"/>

    <com.duapps.screen.recorder.ui.FontTextView
        android:id="@+id/attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/durec_start_live_guide_message_24_hour_limit"
        android:textColor="#888888"
        android:textSize="11dp"/>

    <com.duapps.screen.recorder.ui.FontTextView
        android:id="@+id/confirm_btn"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/durec_common_ok_btn_selector_reverse"
        android:gravity="center"
        android:text="@string/durec_fix_problem"
        android:textColor="@color/durec_common_ok_btn_text_color_reverse"/>
</LinearLayout>
