<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/durec_toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/durec_main_tool_bar_height"
        android:orientation="vertical">

        <com.duapps.screen.recorder.ui.FontTextView
            android:id="@+id/edit_account_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="23dp"
            android:gravity="start"
            android:text="@string/paypal_account_fillin_desc"
            android:textColor="#535353"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_paypal_account"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/durec_paypal_acccount_edittext_bg"
            android:hint="@string/paypal_account_fillin_title"
            android:lines="1"
            android:maxLength="100"
            android:paddingEnd="11dp"
            android:paddingStart="11dp"
            android:singleLine="true"
            android:textColor="#535353"
            android:textColorHint="#888888"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paypal_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:autoLink="all"
                android:text="@string/durec_check_paypal_status"
                android:textColor="#888888"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/unbind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp"
                android:autoLink="all"
                android:text="@string/paypal_unbind"
                android:textColor="#888888"
                android:textSize="13sp" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/paypal_email_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.duapps.screen.recorder.ui.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/paypal_donation_warn"
                    android:drawablePadding="5dp"
                    android:text="@string/durec_donation_be_limited_to_paypal"
                    android:textColor="#DC2828"
                    android:textSize="12dp" />

                <com.duapps.screen.recorder.ui.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/durec_solve_limited_to_paypal_step_1"
                    android:textColor="#535353"
                    android:textSize="13dp" />

                <com.duapps.screen.recorder.ui.FontTextView
                    android:id="@+id/paypal_setting_step_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/durec_solve_limited_to_paypal_step_2"
                    android:textColor="#535353"
                    android:textSize="13dp" />

                <com.duapps.screen.recorder.ui.FontTextView
                    android:id="@+id/paypal_setting_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/durec_solve_limited_to_paypal_title"
                    android:textColor="#535353"
                    android:textSize="13dp" />

                <com.duapps.screen.recorder.ui.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/durec_solve_limited_to_paypal_step_3"
                    android:textColor="#535353"
                    android:textSize="13dp" />

                <com.duapps.screen.recorder.ui.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/durec_solve_limited_to_paypal_step_4"
                    android:textColor="#535353"
                    android:textSize="13dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.duapps.screen.recorder.ui.FontTextView
        android:id="@+id/btn_account_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/screen_bottom_large_btn_height"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/durec_common_ok_btn_selector_reverse"
        android:gravity="center"
        android:text="@string/durec_common_submit"
        android:textColor="@color/durec_common_ok_btn_text_color_reverse"
        android:textSize="@dimen/screen_bottom_large_btn_text_size" />

    <FrameLayout
        android:id="@+id/loading_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</merge>

