<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/durec_miui_float_window_guide_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <com.duapps.screen.recorder.ui.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/durec_cannot_use_pop_window_prompt"
            android:textColor="@color/durec_white"
            android:textSize="15.3dp" />

        <com.duapps.screen.recorder.ui.FontTextView
            android:id="@+id/durec_window_permission_guide_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/durec_turn_on_pop_window_prompt"
            android:textColor="@color/durec_white"
            android:textSize="15.3dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/durec_window_permission_guide_gif"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="23.7dp"
        android:layout_marginTop="23.7dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="13.3dp"
        android:layout_marginRight="13.3dp"
        android:orientation="vertical">

        <com.duapps.screen.recorder.ui.FontTextView
            android:id="@+id/durec_miui_ok_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/durec_miui_float_window_ok_btn_selector"
            android:gravity="center"
            android:text="@string/durec_turn_it_on"
            android:textColor="#c63500"
            android:textSize="16.7dp" />

        <com.duapps.screen.recorder.ui.FontTextView
            android:id="@+id/durec_miui_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/durec_miui_float_window_cancel_btn_selector"
            android:gravity="center"
            android:text="@string/durec_use_notification_to_rec"
            android:textColor="#c63500"
            android:textSize="16.7dp" />
    </LinearLayout>
</LinearLayout>