<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/durec_black"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/durec_preview_toolbar"
        layout="@layout/__picker_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="top" />

    <LinearLayout
        android:id="@+id/durec_option_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#b2000000"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/durec_picture_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/durec_preview_share_selector"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/durec_common_share"
            android:textColor="#e5ffffff" />

        <TextView
            android:id="@+id/durec_picture_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/durec_preview_delete_selector"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/durec_common_delete"
            android:textColor="#e5ffffff" />

        <TextView
            android:id="@+id/durec_picture_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/durec_preview_edit_selector"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/durec_common_edit"
            android:textColor="#e5ffffff" />
    </LinearLayout>


</FrameLayout>